syntax = "proto3";
package trst.x.compute.v1beta1;

// option go_package = "github.com/trstlabs/trst/x/compute/internal/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

//import "x/compute/internal/types/types.proto";

// Msg defines the wasm Msg service.
service Msg {
  // StoreCode to submit Wasm code to the system
  rpc StoreCode(MsgStoreCode) returns (MsgStoreCodeResponse);
  //  Instantiate creates a new smart contract instance for the given code id.
  rpc InstantiateContract(MsgInstantiateContract) returns (MsgInstantiateContractResponse);
  // Execute submits the given message data to a smart contract
  rpc ExecuteContract(MsgExecuteContract) returns (MsgExecuteContractResponse);

}

//StoreCode is used so we can upload code for testing, will be removed on mainnet
message MsgStoreCode {
  option (gogoproto.goproto_getters) = false;

  string sender = 1;
  // WASMByteCode can be raw or gzip compressed
  bytes wasm_byte_code = 2 [(gogoproto.customname) = "WASMByteCode"];
  // Source is a valid absolute HTTPS URI to the contract's source code, optional
  string source = 3;
  // Builder is a valid docker image name with tag, optional
  string builder = 4;
  // InstantiatePermission to apply on contract creation, optional
  //  AccessConfig InstantiatePermission = 5;
  string default_duration = 5;
  string default_interval = 6;
  string title = 7;
  string description = 8;
}


// MsgStoreCodeResponse returns store result data.
message MsgStoreCodeResponse {
  // CodeID is the reference to the stored WASM code
  uint64 code_id = 1 [ (gogoproto.customname) = "CodeID" ];
}


message MsgInstantiateContract {
  option (gogoproto.goproto_getters) = false;

  string sender = 1;
  string code_hash = 2;
  uint64 code_id = 3 [(gogoproto.customname) = "CodeID"];
  //contract_id is a unique name for the contract
  string contract_id = 4;
  //msg instantiates a new contract instance
  bytes msg = 5;
  //auto_msg is a message sent after a set period of time
  bytes auto_msg = 6;
  repeated cosmos.base.v1beta1.Coin funds = 7 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  //duration defines the time that the code should run for
  string duration = 8;
  uint64 start_duration_at = 9;
  //interval defines the interval between auto_msg calls
  string interval = 10;
  //for contracts calling other contracts
  bytes callback_sig = 11 [(gogoproto.customname) = "CallbackSig"];
  //for contracts instantiating on behalf of a user
  string owner = 12;
}

// MsgInstantiateContractResponse return instantiation result data
message MsgInstantiateContractResponse {
  // Address is the bech32 address of the new contract instance.
  string address = 1;
  // Data contains base64-encoded bytes to returned from the contract
  bytes data = 2;
}

message MsgExecuteContract {
  option (gogoproto.goproto_getters) = false;
  string sender = 1;
  string contract = 2;
  bytes msg = 3;
  string code_hash = 4;
  repeated cosmos.base.v1beta1.Coin funds = 5 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  bytes callback_sig = 6 [(gogoproto.customname) = "CallbackSig"];
}

// MsgExecuteContractResponse returns execution result data.
message MsgExecuteContractResponse {
  // Data contains base64-encoded bytes to returned from the contract
  bytes data = 1;
}

message MsgDiscardAutoMsg {
  option (gogoproto.goproto_getters) = false;
  string sender = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  bytes contract_address = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
/*
message MsgUpdateContract {
  option (gogoproto.goproto_getters) = false;
  string owner = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string contract_address = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string new_owner = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string interval = 6;
  string end_time = 7;
  uint64 start_duration_at = 8;
}

message MsgMigrateContract {
  option (gogoproto.goproto_getters) = false;

  string sender = 1;
  bytes contract = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  uint64 code_id = 3 [(gogoproto.customname) = "CodeID"];
  bytes migrate_msg = 4 [(gogoproto.casttype) = "encoding/json.RawMessage"];
}

message MsgUpdateAdmin {
  option (gogoproto.goproto_getters) = false;
  string sender = 1;
  bytes new_admin = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  bytes contract = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

message MsgClearAdmin {
  option (gogoproto.goproto_getters) = false;
  string sender = 1;
  bytes contract = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}


 */


